Bug 126790 - CRASH: Closing LibreOffice while 'Help is not Installed' dialog is open in extension manager (gen/gtk)
Summary: CRASH: Closing LibreOffice while 'Help is not Installed' dialog is open in ex...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.1
Keywords: bibisected, bisected
Depends on:
Blocks:
 
Reported: 2019-08-09 09:51 UTC by Xisco Faulí
Modified: 2019-08-12 07:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["Dialog::Execute()"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-08-09 09:51:48 UTC
Steps to reproduce:
1. Open LibreOffice
2. Tools - extension manager
3. Help -> Help is not installed dialog is displayed
4. Close LibreOffice

-> Crash

Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: d4a70ecf61b016a32caef015eea127d13b357cf7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-08-09 09:53:45 UTC
This started to crash after https://cgit.freedesktop.org/libreoffice/core/commit/?id=5d5e0da5c314773129d8153363e2892fc359a744, before the mentioned commit, LibreOffice remains in the background and has to be closed from the task manager

@Caolán, I thought you might be interested in this issue...
Comment 2 Commit Notification 2019-08-09 12:46:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/83e99babaa4ae7d5479912bbda9bcd653ab0ccb3%5E%21

Resolves: tdf#126790 use TopLevelWindowLocker in welded help path

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2019-08-09 13:05:15 UTC
fixed master, backport to 6-3 in gerrit
Comment 4 Xisco Faulí 2019-08-12 07:53:09 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 2812610f4f39ed5892da08864893c758325d1d39
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 5 Commit Notification 2019-08-12 07:57:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/fbcaaaab0603825b31c4679d4713c0b3530c5dec%5E%21

Resolves: tdf#126790 use TopLevelWindowLocker in welded help path

It will be available in 6.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.