Resolves: tdf#126790 use TopLevelWindowLocker in welded help path

Change-Id: I4340d021b63609189d3179a7bcff7fac4fcef69d
Reviewed-on: https://gerrit.libreoffice.org/77195
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>